fixing header on mobile
contributing to issue #22

--- a/css/style.css
+++ b/css/style.css
@@ -341,3 +341,10 @@ input {
   width: 50%;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 400px) {
+    .title__main {
+        font-size: 4.5rem;
+        padding-left: 7%;
+    }
+}
